--- a/democloud/src/pages/sellerlist/sellerlist.css
+++ b/democloud/src/pages/sellerlist/sellerlist.css
@@ -144,6 +144,7 @@
     align-items: center;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
+    cursor: pointer;
 }
 .seller-table-top .s-btn .s-input .icon-s svg{
     font-size: 1.5em;
@@ -163,6 +164,7 @@
     color: #232929;
     box-shadow: 0px 0px 5px 0.5px #c6bfbf;
     background-color: #fff;
+   
     
 }
 .e-btn svg{
